toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__binary_unequal_operation.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        BinaryOperation(
            NotEqual,
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            1,
                            3,
                        ),
                    ),
                    (),
                ),
            ),
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            8,
                        ),
                        Point(
                            1,
                            10,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                10,
            ),
        ),
        (),
    ),
)
