toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__closure_empty.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Closure(
            [],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                2,
            ),
        ),
        (),
    ),
)
