toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__closure_with_statements.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Closure(
            [
                Statement(
                    Node(
                        Expression(
                            Expression(
                                Node(
                                    Primitive(
                                        Nil,
                                    ),
                                    Range(
                                        Point(
                                            1,
                                            3,
                                        ),
                                        Point(
                                            1,
                                            5,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        ),
                        Range(
                            Point(
                                1,
                                3,
                            ),
                            Point(
                                1,
                                5,
                            ),
                        ),
                        (),
                    ),
                ),
                Statement(
                    Node(
                        Expression(
                            Expression(
                                Node(
                                    Primitive(
                                        Nil,
                                    ),
                                    Range(
                                        Point(
                                            1,
                                            8,
                                        ),
                                        Point(
                                            1,
                                            10,
                                        ),
                                    ),
                                    (),
                                ),
                            ),
                        ),
                        Range(
                            Point(
                                1,
                                8,
                            ),
                            Point(
                                1,
                                10,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                12,
            ),
        ),
        (),
    ),
)
