toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__function_call.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        FunctionCall(
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            1,
                        ),
                        Point(
                            1,
                            3,
                        ),
                    ),
                    (),
                ),
            ),
            [
                Expression(
                    Node(
                        Primitive(
                            Nil,
                        ),
                        Range(
                            Point(
                                1,
                                5,
                            ),
                            Point(
                                1,
                                7,
                            ),
                        ),
                        (),
                    ),
                ),
                Expression(
                    Node(
                        Primitive(
                            Nil,
                        ),
                        Range(
                            Point(
                                1,
                                10,
                            ),
                            Point(
                                1,
                                12,
                            ),
                        ),
                        (),
                    ),
                ),
            ],
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                13,
            ),
        ),
        (),
    ),
)
