toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__group.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Group(
            Expression(
                Node(
                    Primitive(
                        Nil,
                    ),
                    Range(
                        Point(
                            1,
                            2,
                        ),
                        Point(
                            1,
                            4,
                        ),
                    ),
                    (),
                ),
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                5,
            ),
        ),
        (),
    ),
)
