toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__identifier.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Identifier(
            "foo",
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                3,
            ),
        ),
        (),
    ),
)
