toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_false.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            Boolean(
                false,
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                5,
            ),
        ),
        (),
    ),
)
