toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_float.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            Float(
                123.456,
                3,
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                7,
            ),
        ),
        (),
    ),
)
