toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_integer.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            Integer(
                123,
            ),
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                3,
            ),
        ),
        (),
    ),
)
