toolchain/parse/src/expression/snapshots/knot_parse__expression__tests__primitive_nil.snap
---
source: toolchain/parse/src/expression/mod.rs
expression: ast
---
Expression(
    Node(
        Primitive(
            Nil,
        ),
        Range(
            Point(
                1,
                1,
            ),
            Point(
                1,
                3,
            ),
        ),
        (),
    ),
)
